finished refactoring models

--- a/notebooks/week_8/refactor.ipynb
+++ b/notebooks/week_8/refactor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,29 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Correlated:\n",
-    "    def __init__(self, y, likelihood, mean, covinv):\n",
-    "        self.y = y\n",
-    "        self.likelihood = likelihood\n",
-    "        self.mean = mean\n",
-    "        self.covinv = covinv\n",
-    "        self.N = len(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,18 +68,10 @@
     "        H = self.hess(theta_max)\n",
     "        D = len(theta_max) + 1\n",
     "        return logZ(logPr_max, H, D, details)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
     "class LS(Model):\n",
     "    def __init__(self, y, likelihood, mean):\n",
-    "        super().__init__()\n",
+    "        super().__init__(y, likelihood, mean)\n",
     "    \n",
     "    def L_sq(self, theta):\n",
     "        loss = self.mean - self.likelihood.inverse(self.y, theta)\n",
@@ -131,12 +101,33 @@
     "        H = hessian(func, theta_s_max)\n",
     "        return np.array(H)\n",
     "    \n",
-    "    "
+    "class Corr(Model):\n",
+    "    def __init__(self, y, likelihood, mean, covinv):\n",
+    "        super().__init__(y, likelihood, mean)\n",
+    "        self.covinv = covinv\n",
+    "        self.logdet_inv = np.linalg.slogdet(covinv)[1]\n",
+    "    \n",
+    "    def logPr(self, theta):\n",
+    "        Xstar = self.likelihood.inverse(self.y, theta)\n",
+    "        log_abs_fprimes = np.log(abs(self.likelihood.prime(Xstar, theta)))\n",
+    "        return 1/2 * self.logdet_inv - np.sum(log_abs_fprimes) - 1/2 * (Xstar - self.mean).T @ self.covinv @ (Xstar - self.mean)\n",
+    "    \n",
+    "    def hess(self, theta_max):\n",
+    "        y = torch.from_numpy(self.y)\n",
+    "        mean = torch.from_numpy(self.mean)\n",
+    "        covinv = torch.from_numpy(self.covinv)\n",
+    "        theta_max = torch.tensor(theta_max, requires_grad=True)\n",
+    "        def func(theta):\n",
+    "            Xstar = self.likelihood.inverse(y, theta, torch=True)\n",
+    "            log_abs_fprimes = torch.log(abs(self.likelihood.prime(Xstar, theta, torch=True)))\n",
+    "            return - torch.sum(log_abs_fprimes) - 1/2 * (Xstar - mean).T @ covinv @ (Xstar - mean)\n",
+    "        H = hessian(func, theta_max)\n",
+    "        return np.array(H)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,35 +142,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls = LS(y, simple, mean_X)\n",
+    "corr = Corr(y, simple, mean_X, covinv_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1684.335579042667"
+       "1701.199936512684"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ls = LS(y, simple, mean_X)\n",
     "theta_l = ls.minimise(theta_true)\n",
     "ls.logZ(theta_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3730.0450916052373"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class Model:\n",
-    "    def __init__(self, y, like, mean, covinv, model):\n",
-    "        self.model = model"
+    "theta_c = corr.minimise(theta_true)\n",
+    "corr.logZ(theta_c)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Cauchy evidence**"
    ]
   },
   {
@@ -187,7 +205,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def log_cauchy(X, theta=1):\n",
+    "    return np.log(theta/(theta**2 + X**2))"
+   ]
   }
  ],
  "metadata": {
