added evidence penalty and problem with LS errorbars

--- a/notebooks/week_8/more_less_data.ipynb
+++ b/notebooks/week_8/more_less_data.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,13 +601,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d0e12890eaa43b4b094bf4585979fcc",
+       "model_id": "bb19addeb03d41ae8b3256e2ee1e8894",
        "version_major": 2,
        "version_minor": 0
       },
@@ -626,6 +626,8 @@
     "    ls = LS(y, like, mean)\n",
     "    # alpha = 0\n",
     "    startf = int(ndead * (1 - alpha))\n",
+    "    Nex = startf\n",
+    "    penalty = Nex * np.log(Nex) - Nex if Nex != 0 else 0\n",
     "    Xf = X[startf:]\n",
     "    yf = y[startf:]\n",
     "    meanf = mean[startf:]\n",
@@ -634,7 +636,7 @@
     "    theta_l = ls.minimise([0.2, 3, 1.2])\n",
     "    theta_lf = lsf.minimise([0.2, 3, 1.2])\n",
     "    logZ_l = ls.logZ(theta_l)\n",
-    "    logZ_lf = lsf.logZ(theta_lf)\n",
+    "    logZ_lf = lsf.logZ(theta_lf) - penalty\n",
     "    # plt.figure(figsize=(6,6))\n",
     "    plt.plot(like.inverse(y, theta_l), y, label=f'all: logZ={logZ_l:.0f}, θ={np.round(theta_l, 2)}', lw=2, color='black')\n",
     "    plt.plot(like.inverse(y, theta_lf), y, label=f'partial: logZ={logZ_lf:.0f}, θ={np.round(theta_lf, 2)}', lw=2, color='darkgoldenrod')\n",
@@ -653,12 +655,12 @@
    "source": [
     "### **Gaussian NS chain**\n",
     "\n",
-    "$\\log Z$ peaks at $\\alpha = 0.8$"
+    "$\\log Z$ peaks at $\\alpha = 0.8$ without penalty, 0.9 with"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,13 +672,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fc0d69f60614528b2573a2f478c4520",
+       "model_id": "fee2bb1702ef4ffba1199ce51e172851",
        "version_major": 2,
        "version_minor": 0
       },
@@ -695,6 +697,8 @@
     "    ls = LS(y, like, mean)\n",
     "    # alpha = 0\n",
     "    startf = int(ndead * (1 - alpha))\n",
+    "    Nex = startf\n",
+    "    penalty = Nex * np.log(Nex) - Nex if Nex != 0 else 0\n",
     "    Xf = X[startf:]\n",
     "    yf = y[startf:]\n",
     "    meanf = mean[startf:]\n",
@@ -703,13 +707,13 @@
     "    theta_l = ls.minimise([1, 10, 0.1])\n",
     "    theta_lf = lsf.minimise([1, 10, 0.1])\n",
     "    logZ_l = ls.logZ(theta_l)\n",
-    "    logZ_lf = lsf.logZ(theta_lf)\n",
+    "    logZ_lf = lsf.logZ(theta_lf) - penalty\n",
     "    # plt.figure(figsize=(6,6))\n",
-    "    plt.plot(np.log(like.inverse(y, theta_l)), y, label=f'all: logZ={logZ_l:.0f}, θ={np.round(theta_l, 2)}', lw=2, color='black')\n",
-    "    plt.plot(np.log(like.inverse(y, theta_lf)), y, label=f'partial: logZ={logZ_lf:.0f}, θ={np.round(theta_lf, 2)}', lw=2, color='darkgoldenrod')\n",
-    "    plt.plot(np.log(mean), y, 'x', ms=1, color='dimgray')\n",
-    "    plt.plot(np.log(meanf), yf, 'x', ms=1, color='orange')\n",
-    "    # plt.xlim(0, 1)\n",
+    "    plt.plot(like.inverse(y, theta_l), y, label=f'all: logZ={logZ_l:.0f}, θ={np.round(theta_l, 2)}', lw=2, color='black')\n",
+    "    plt.plot(like.inverse(y, theta_lf), y, label=f'partial: logZ={logZ_lf:.0f}, θ={np.round(theta_lf, 2)}', lw=2, color='darkgoldenrod')\n",
+    "    plt.plot(mean, y, 'x', ms=1, color='dimgray')\n",
+    "    plt.plot(meanf, yf, 'x', ms=1, color='orange')\n",
+    "    plt.xlim(0, 1)\n",
     "    plt.legend();"
    ]
   },
@@ -725,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,13 +741,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "094dc5b80ce643dbaf5860f79802c31e",
+       "model_id": "923163c998184a3dbcf2d35a0a68e8a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -762,6 +766,8 @@
     "    ls = LS(y, like, mean)\n",
     "    # alpha = 0\n",
     "    startf = int(ndead * (1 - alpha))\n",
+    "    Nex = startf\n",
+    "    penalty = Nex * np.log(Nex) - Nex if Nex != 0 else 0\n",
     "    Xf = X[startf:]\n",
     "    yf = y[startf:]\n",
     "    meanf = mean[startf:]\n",
@@ -770,7 +776,7 @@
     "    theta_l = ls.minimise([1, 10, 0.1])\n",
     "    theta_lf = lsf.minimise([1, 10, 0.1])\n",
     "    logZ_l = ls.logZ(theta_l)\n",
-    "    logZ_lf = lsf.logZ(theta_lf)\n",
+    "    logZ_lf = lsf.logZ(theta_lf) - penalty\n",
     "    # plt.figure(figsize=(6,6))\n",
     "    plt.plot(like.inverse(y, theta_l), y, label=f'all: logZ={logZ_l:.0f}, θ={np.round(theta_l, 2)}', lw=2, color='black')\n",
     "    plt.plot(like.inverse(y, theta_lf), y, label=f'partial: logZ={logZ_lf:.0f}, θ={np.round(theta_lf, 2)}', lw=2, color='darkgoldenrod')\n",
