--- a/notebooks/week_8/refactor.ipynb
+++ b/notebooks/week_8/refactor.ipynb
@@ -111,6 +111,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nk_dead' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nk \u001b[39m=\u001b[39m nk_dead(\u001b[39m500\u001b[39m, \u001b[39m500\u001b[39m)\n\u001b[1;32m      2\u001b[0m mean_X \u001b[39m=\u001b[39m X_mu(nk)\n\u001b[1;32m      3\u001b[0m covinv_X \u001b[39m=\u001b[39m X_Sigmainv(nk)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nk_dead' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
