updated evidence penalty/LS errorbars

--- a/notebooks/week_8/LS_bandwidth.ipynb
+++ b/notebooks/week_8/LS_bandwidth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,6 @@
    "metadata": {},
    "source": [
     "Goal - find fraction $\\alpha$ of $n_\\text{dead}$ to us which maximises the evidence\n",
-    "\n",
-    "**To do:**\n",
-    "- Find/plot $\\log Z$ as a function of $\\alpha$ for different likelihood functions\n",
-    "\n",
-    "- Implement penalty anyway, observe results on cubic/Gaussian/CG data\n",
-    "\n",
     "\n",
     "\n",
     "**Thoughts:**\n",
@@ -277,12 +271,12 @@
     "- Model is still a good fit to data for large number of points. More evidence for more data **before** introducing penalty for fewer points\n",
     "- Suggests we should use all of the data. If we introduce the evidence penalty for using few points, we would get the same conclusion.\n",
     "\n",
-    "$\\log Z$ monotonically increases with $N$"
+    "$\\log Z$ monotonically increases with $N$; $\\alpha_\\mathrm{max} = 1$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,18 +295,20 @@
     "theta_true = 10\n",
     "like = simple\n",
     "y = like.func(X, theta_true)\n",
-    "ls = LS(y, like, mean)"
+    "ls = LS(y, like, mean)\n",
+    "theta_l = ls.minimise(10)\n",
+    "logZ_l = ls.logZ(theta_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a9f5dafa4524704b47ea9b799b27eee",
+       "model_id": "1932c9caf31641e9a297b3c2b7770c7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -335,9 +331,7 @@
     "    meanf = mean[startf:]\n",
     "    lsf = LS(yf, like, meanf)\n",
     "\n",
-    "    theta_l = ls.minimise(10)\n",
     "    theta_lf = lsf.minimise(10)\n",
-    "    logZ_l = ls.logZ(theta_l)\n",
     "    logZ_lf = lsf.logZ(theta_lf)\n",
     "    # plt.figure(figsize=(6,6))\n",
     "    plt.plot(like.inverse(y, theta_l), y, label=f'all: logZ={logZ_l:.0f}, θ={np.round(theta_l, 2)}', lw=2, color='black')\n",
@@ -357,12 +351,14 @@
    "source": [
     "### **Cauchy - okay model, low noise**\n",
     "\n",
-    "Model still good enough that using more data gathers more evidence"
+    "Model still good enough that using more data gathers more evidence\n",
+    "\n",
+    "$\\alpha_\\mathrm{max} = 1$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,25 +371,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = generate_Xs(nk)\n",
     "y = cauchy(X, 0.1)\n",
     "like = full\n",
-    "ls = LS(y, like, mean)"
+    "ls = LS(y, like, mean)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23c45bf2344e4c998f6153b1d225c63b",
+       "model_id": "e8babb177efa4e0d9766c2cfcd60a494",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,15 +407,17 @@
     "def func(alpha):\n",
     "    # alpha = 0\n",
     "    startf = int(ndead * (1 - alpha))\n",
+    "    Nex = startf\n",
+    "    penalty = Nex * np.log(Nex) - Nex if Nex != 0 else 0\n",
     "    Xf = X[startf:]\n",
     "    yf = y[startf:]\n",
     "    meanf = mean[startf:]\n",
     "    lsf = LS(yf, like, meanf)\n",
     "\n",
-    "    theta_l = ls.minimise([3, 10, 0.1])\n",
-    "    theta_lf = lsf.minimise([3, 11, 0.1])\n",
+    "    theta_l = ls.minimise([3, 11, 0.1])\n",
+    "    theta_lf = lsf.minimise([3, 10, 0.1])\n",
     "    logZ_l = ls.logZ(theta_l)\n",
-    "    logZ_lf = lsf.logZ(theta_lf)\n",
+    "    logZ_lf = lsf.logZ(theta_lf) - penalty\n",
     "    # plt.figure(figsize=(6,6))\n",
     "    plt.plot(like.inverse(y, theta_l), y, label=f'all: logZ={logZ_l:.0f}, θ={np.round(theta_l, 2)}', lw=2, color='black')\n",
     "    plt.plot(like.inverse(y, theta_lf), y, label=f'partial: logZ={logZ_lf:.0f}, θ={np.round(theta_lf, 2)}', lw=2, color='darkgoldenrod')\n",
@@ -488,12 +486,14 @@
     "\n",
     "Evidences more like case (2), even more so compared to Cauchy. What do we actually want to achieve with the bandwidth? \n",
     "\n",
-    "What would be the ideal points/results to get here?"
+    "What would be the ideal points/results to get here?\n",
+    "\n",
+    "$\\alpha_\\mathrm{max} = 1$ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,13 +518,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d35f83139714b67addcde857f26436e",
+       "model_id": "9c63982056a440c3ade1a401d0c03caa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -542,6 +542,8 @@
     "def func(alpha):\n",
     "    # alpha = 0\n",
     "    startf = int(ndead * (1 - alpha))\n",
+    "    Nex = startf\n",
+    "    penalty = Nex * np.log(Nex) - Nex if Nex != 0 else 0\n",
     "    Xf = X[startf:]\n",
     "    yf = y[startf:]\n",
     "    meanf = mean[startf:]\n",
@@ -550,7 +552,7 @@
     "    theta_l = ls.minimise([0.2, 13, 0.5])\n",
     "    theta_lf = lsf.minimise([1, 5, 1])\n",
     "    logZ_l = ls.logZ(theta_l)\n",
-    "    logZ_lf = lsf.logZ(theta_lf)\n",
+    "    logZ_lf = lsf.logZ(theta_lf) - penalty\n",
     "    # plt.figure(figsize=(6,6))\n",
     "    plt.plot(like.inverse(y, theta_l), y, label=f'all: logZ={logZ_l:.0f}, θ={np.round(theta_l, 2)}', lw=2, color='black')\n",
     "    plt.plot(like.inverse(y, theta_lf), y, label=f'partial: logZ={logZ_lf:.0f}, θ={np.round(theta_lf, 2)}', lw=2, color='darkgoldenrod')\n",
@@ -569,14 +571,12 @@
    "source": [
     "### **Cubic - model good for live points, bad for some deads**\n",
     "\n",
-    "$\\log Z$ peaks at $\\alpha = 0.5/0.7$\n",
-    "\n",
-    "**Peak in evidence which is not at zero data!**"
+    "$\\alpha_\\mathrm{max} = 0.5/0.7$ without penalty, $0.65/0.8$ with"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,18 +601,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb19addeb03d41ae8b3256e2ee1e8894",
+       "model_id": "fc517efa75694c2f86654f455f66eab6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.0, description='alpha', max=1.0), Output()), _dom_classes=('widget-i…"
+       "interactive(children=(FloatSlider(value=0.0, description='alpha', max=1.0, step=0.05), Output()), _dom_classes…"
       ]
      },
      "metadata": {},
@@ -621,7 +621,7 @@
    ],
    "source": [
     "from ipywidgets import interact, FloatSlider\n",
-    "@interact(alpha=FloatSlider(min=0, max=1, step=0.1))\n",
+    "@interact(alpha=FloatSlider(min=0, max=1, step=0.05))\n",
     "def func(alpha):\n",
     "    ls = LS(y, like, mean)\n",
     "    # alpha = 0\n",
@@ -655,12 +655,12 @@
    "source": [
     "### **Gaussian NS chain**\n",
     "\n",
-    "$\\log Z$ peaks at $\\alpha = 0.8$ without penalty, 0.9 with"
+    "$\\log Z$ peaks at $\\alpha = 0.8$ without penalty, 0.9 with (noise at start of the run fits model badly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,13 +672,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fee2bb1702ef4ffba1199ce51e172851",
+       "model_id": "61486865dcb54127aae70e86aeaf4641",
        "version_major": 2,
        "version_minor": 0
       },
@@ -724,12 +724,12 @@
    "source": [
     "### **Correlated Gaussian NS chain**\n",
     "\n",
-    "$\\log Z$ peaks at $\\alpha = 0$"
+    "$\\alpha_\\mathrm{max} = 0$ without penalty, $0.5-0.7$ with penalty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,13 +741,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "923163c998184a3dbcf2d35a0a68e8a7",
+       "model_id": "751548baad1343d9b8ef1d11440c92ca",
        "version_major": 2,
        "version_minor": 0
       },
