--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -347,7 +347,11 @@ We can get someway to the analytics for MCMC. Similar arguments to below show th
     P(x) = n \frac{e^{-x} x^{\frac{d}{2}-1} }{\Gamma\left(\frac{d}{2}\right)} {\left( \frac{\Gamma_{\frac{d}{2}}(x)}{\Gamma(\frac{d}{2})} \right)}^{n-1},
 \end{equation}
 where $x=2(\log\mathcal{L}_\mathrm{max}-\log\mathcal{L}_\mathrm{max}^\mathrm{posterior})$
-since if we have the CDF of a distribution as $F(x)$, then the lowest of n random variables is $\frac{d}{dx}( 1- (1-F(x))^n)$, and we the upper CDF for a $\chi^2_{d/2}$ distribution is $\Gamma_{\frac{d}{2}}(x)/\Gamma(\frac{d}{2})$. I have not yet been able to find an analytic expression/approximation for the center and width of this distribution.
+since if we have the CDF of a distribution as $F(x)$, then the lowest of n random variables is $\frac{d}{dx}( 1- (1-F(x))^n)$, and we the upper CDF for a $\chi^2_{d/2}$ distribution is $\Gamma_{\frac{d}{2}}(x)/\Gamma(\frac{d}{2})$. I have not yet been able to find an analytic expression/approximation for the center and width of this distribution, but Jensen's inequality with a Gaussian approximation\footnote{\url{https://math.stackexchange.com/a/89147}} yields
+\begin{equation}
+    \log\mathcal{L}_\mathrm{max}^\mathrm{posterior} \le  \log\mathcal{L}_\mathrm{max} - \frac{d}{2} + \sqrt{d\log n} 
+    %\log\mathcal{L}_\mathrm{max}^\mathrm{posterior} \leq \log\mathcal{L}_\mathrm{max} - \frac{d}{2} + \sqrt{d\log n}.
+\end{equation}
 
 The same is true for nested sampling, although since it is not a posterior sampler, but a likelihood upward scanner, the argument is a little more subtle, which we work through below.
 
